--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-torch==1.4.0
-numpy==1.17.4
-librosa==0.7.2
-scipy==1.4.1
-tensorboard==2.0
-soundfile==0.10.3.post1
-matplotlib==3.1.3
+torch==2.0.0
+numpy>=1.17.4
+librosa==0.8.1
+scipy>=1.4.1
+tensorboard==2.8.0
+soundfile>=0.10.3.post1
+matplotlib>=3.1.3
+protobuf==3.20.3
+torchaudio==2.0.1
