--- a/configs/fregan2/config_fregan2_multi_idwt_v1.json
+++ b/configs/fregan2/config_fregan2_multi_idwt_v1.json
@@ -8,15 +8,14 @@
     "lr_decay": 0.999,
     "seed": 1234,
 
-    "upsample_rates": [8,8,2],
-    "upsample_kernel_sizes": [16,16,4],
-    "upsample_initial_channel": 128,
+    "generator": "2",
+    "upsample_rates": [8,8],
+    "upsample_kernel_sizes": [16,16],
+    "upsample_initial_channel": 512,
     "resblock_kernel_sizes": [3,7,11],
     "resblock_dilation_sizes": [[1,3,5], [1,3,5], [1,3,5]],
-    "rad": 2,
 
     "segment_size": 8192,
-
     "num_mels": 80,
     "num_freq": 1025,
     "n_fft": 1024,
@@ -24,6 +23,7 @@
     "win_size": 1024,
     "window": "hann",
     "sampling_rate": 22050,
+
     "fmin": 0,
     "fmax": 8000,
     "fmax_for_loss": null,
@@ -39,7 +39,7 @@
 
     "dist_config": {
         "dist_backend": "nccl",
-        "dist_url": "tcp://localhost:54359",
+        "dist_url": "tcp://localhost:54365",
         "world_size": 1
     }
 
